# Car_Sales_Prediction

./: Analiza_Predykcja cen samochodowych.docx  New_approach_Car_Sales_Prediction.ipynb  README.md  data_cleaning.ipynb  hello.py  helper_functions.py  improved-car-price-model (1).py  main — kopia.py  pyproject.toml
